fixed bugs, added result environment to test-plugin output